Fixed overflow alignment issues

--- a/hearthstone-leaderboard-ui/public/main.css
+++ b/hearthstone-leaderboard-ui/public/main.css
@@ -4,4 +4,5 @@ html, body, #root {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
