--- a/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
+++ b/hearthstone-leaderboard-ui/src/Components/Dashboard/Board/Dashboard.module.css
@@ -1,7 +1,7 @@
 .board {
     display: flex;
     height: 100%;
-    column-gap: 0.5em;
+    column-gap: 0.2em;
 }
 
 .content-container {
@@ -10,7 +10,7 @@
     margin: 0.4em;
     row-gap: 0.5em;
     width: 100%;
-    height: 98.2%;
+    height: 98%;
     overflow: auto;
 }
 
@@ -19,7 +19,8 @@
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1em;
-    flex-grow: 1;
+    flex-grow: 0.5;
+    height:fit-content;
 }
 
 .visualizer-grid {
@@ -28,4 +29,5 @@
     grid-template-columns: 1.4fr 1fr;
     gap: 0.5em;
     flex-grow: 1;
+    height:fit-content;
 }
